--- a/Counter/Reswift Counter/Podfile
+++ b/Counter/Reswift Counter/Podfile
@@ -1,20 +1,18 @@
 # Uncomment this line to define a global platform for your project
 platform :ios, '8.0'
+use_frameworks!
 
 target 'Reswift Counter' do
-  # Comment this line if you're not using Swift and don't want to use dynamic frameworks
-  use_frameworks!
   pod 'ReSwift'
   # Pods for Reswift Counter
 
   target 'Reswift CounterTests' do
+    pod 'ReSwift'
     inherit! :search_paths
-    # Pods for testing
   end
 
   target 'Reswift CounterUITests' do
     inherit! :search_paths
-    # Pods for testing
   end
 
 end
